[gd_scene load_steps=2 format=2]

[ext_resource path="res://misc/convo_maker.gd" type="Script" id=1]

[node name="convo_maker" type="Node2D"]
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 246.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 8.0
margin_top = 56.0
margin_right = 584.0
margin_bottom = 216.0

[node name="Button" type="Button" parent="."]
margin_left = 264.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 40.0
text = "PREVIEW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 608.0
margin_top = 88.0
margin_right = 664.0
margin_bottom = 128.0
text = "UP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 608.0
margin_top = 160.0
margin_right = 664.0
margin_bottom = 200.0
text = "DOWN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 224.0
margin_right = 592.0
margin_bottom = 376.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 608.0
margin_top = 136.0
margin_right = 664.0
margin_bottom = 176.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 360.0
margin_top = 16.0
margin_right = 446.0
margin_bottom = 40.0
text = "OVERWRITE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
margin_left = 624.0
margin_top = 48.0
margin_right = 672.0
margin_bottom = 72.0
text = "SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 624.0
margin_top = 16.0
margin_right = 673.0
margin_bottom = 40.0
text = "LOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 456.0
margin_top = 16.0
margin_right = 624.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
